add footer and login in the header

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -6,4 +6,6 @@ $accent_0: #CB727F;
 $accent_1: #FCEEAE;
 $accent_2: #DCD7F4;
 $accent_3: #ABE3BD;
-$accent_4: #9BC1F3
+$accent_4: #9BC1F3;
+
+$footer_grey: #ECECEC;
