add input component

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,5 +1,6 @@
 /* white */
-$white: #fff;
+$white_0: #fff;
+$white_1: #f3f3f4;
 
 /* accent colors */
 $accent_0: #CB727F;
@@ -10,3 +11,4 @@ $accent_4: #9BC1F3;
 
 $footer_grey: #ECECEC;
 $hover_grey: #E7E7E9;
+$placeholder_grey: #a6a6af;
